syntax = "proto3";	// 指定语法格式，注意 proto3 不再支持 proto2 的 required 和 optional

// protoc 版本低于3.9.x请用这个
// option go_package = "pb";

// protoc 3.11.4 版本请用这个
option go_package = "./;pb";

package Hello; // 指定生成php文件的命名空间，防止命名冲突
import "google/api/annotations.proto";

// Greeter service 定义开放调用的服务
service Greeter {
    rpc SayHello (HelloReq) returns (HelloReply){
        option (google.api.http) = {
            get: "/v1/say/{name}"
        };
    };
}

// message 对应生成代码的 struct
// 定义客户端请求的数据格式
// @validator=HelloReq
message HelloReq {
    // [修饰符] 类型 字段名 = 标识符;
    // @inject_tag: json:"name" validate:"required,min=1"
    string name = 1;
}

// 定义服务端响应的数据格式
message HelloReply {
    // @inject_tag: json:"message"
    string message = 2;
}
